--- a/epic-duels-client/src/main/resources/fxml/MainView.fxml
+++ b/epic-duels-client/src/main/resources/fxml/MainView.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
 <VBox xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <MenuBar fx:id="menuBar">
@@ -28,6 +27,6 @@
           </Menu>
         </menus>
       </MenuBar>
-      <AnchorPane fx:id="mainPane" prefHeight="200.0" prefWidth="200.0" />
+      <AnchorPane fx:id="mainPane" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
    </children>
 </VBox>
