--- a/epic-duels-client/src/main/resources/fxml/UserSelectionView.fxml
+++ b/epic-duels-client/src/main/resources/fxml/UserSelectionView.fxml
@@ -20,12 +20,12 @@
             </Label>
          </children>
       </AnchorPane>
-      <ListView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
+      <ListView fx:id="userListView" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
       <HBox alignment="CENTER" spacing="30.0">
          <children>
-            <Button mnemonicParsing="false" text="New User" />
-            <Button mnemonicParsing="false" text="Remove User" />
-            <Button mnemonicParsing="false" text="Select User" />
+            <Button mnemonicParsing="false" onAction="#addNewUser" text="New User" />
+            <Button fx:id="removeUserButton" disable="true" mnemonicParsing="false" onAction="#removeUser" text="Remove User" />
+            <Button fx:id="selectUserButton" disable="true" mnemonicParsing="false" onAction="#selectUser" text="Select User" />
          </children>
          <padding>
             <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
