--- a/epic-duels-client/src/main/resources/fxml/MainMenuView.fxml
+++ b/epic-duels-client/src/main/resources/fxml/MainMenuView.fxml
@@ -1,8 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
-</AnchorPane>
-
+<VBox xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <HBox VBox.vgrow="ALWAYS">
+         <children>
+            <VBox spacing="10.0" HBox.hgrow="ALWAYS">
+               <children>
+                  <HBox spacing="20.0">
+                     <children>
+                        <Button mnemonicParsing="false" text="Create Game" />
+                        <Button mnemonicParsing="false" text="Join Game" />
+                        <Button mnemonicParsing="false" text="Load Game" />
+                     </children>
+                     <VBox.margin>
+                        <Insets left="10.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <ListView VBox.vgrow="ALWAYS" />
+                  <TextArea VBox.vgrow="ALWAYS" />
+               </children>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </VBox>
+            <VBox>
+               <children>
+                  <AnchorPane>
+                     <children>
+                        <Label alignment="CENTER" text="Players" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </AnchorPane>
+                  <ListView fx:id="playerListView" VBox.vgrow="ALWAYS" />
+               </children>
+               <padding>
+                  <Insets bottom="10.0" right="10.0" top="18.0" />
+               </padding>
+            </VBox>
+         </children>
+      </HBox>
+      <TextField>
+         <VBox.margin>
+            <Insets left="10.0" right="10.0" />
+         </VBox.margin></TextField>
+   </children>
+   <padding>
+      <Insets bottom="10.0" />
+   </padding>
+</VBox>
