--- a/epic-duels-client/src/main/resources/fxml/MainMenuView.fxml
+++ b/epic-duels-client/src/main/resources/fxml/MainMenuView.fxml
@@ -28,7 +28,7 @@
                      </VBox.margin>
                   </HBox>
                   <ListView VBox.vgrow="ALWAYS" />
-                  <TextArea VBox.vgrow="ALWAYS" />
+                  <TextArea fx:id="textMessagesArea" VBox.vgrow="ALWAYS" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -53,7 +53,7 @@
             </VBox>
          </children>
       </HBox>
-      <TextField>
+      <TextField fx:id="textMessageField" onAction="#sendTextMessage">
          <VBox.margin>
             <Insets left="10.0" right="10.0" />
          </VBox.margin></TextField>
